fixed too short span element

--- a/src/frontend/assets/scss/_components/list.scss
+++ b/src/frontend/assets/scss/_components/list.scss
@@ -70,6 +70,10 @@
   .list-inner {
     width: 100%;
   }
+
+  span {
+    width: 100%;
+  }
 }
 
 .patient-list {
